--- a/03_05/index.html
+++ b/03_05/index.html
@@ -6,5 +6,11 @@
     <title>Accessing objects</title>
     <script src="script.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <h1> accessing Objects  </h1>
+
+
+
+
+  </body>
 </html>
